[gd_scene load_steps=6 format=3 uid="uid://c5f4t2u0kv32c"]

[ext_resource type="Script" path="res://World/World.gd" id="1_xabdy"]
[ext_resource type="PackedScene" uid="uid://yli5idxw56qq" path="res://World/Arrow.tscn" id="2_ygwjy"]
[ext_resource type="PackedScene" uid="uid://cjp7swrwcf7ss" path="res://Player/Player.tscn" id="3_psh38"]
[ext_resource type="PackedScene" uid="uid://b3brwk4yt28ba" path="res://MapGenerator/map_generator.tscn" id="4_7kc8u"]
[ext_resource type="Texture2D" uid="uid://1a4reooquy0n" path="res://background.png" id="5_76ls1"]

[node name="World" type="Node2D"]
script = ExtResource("1_xabdy")
arrow_scene = ExtResource("2_ygwjy")

[node name="Player" parent="." instance=ExtResource("3_psh38")]
position = Vector2(263, 180)

[node name="PatternContainer" parent="." instance=ExtResource("4_7kc8u")]

[node name="Line2D" type="Line2D" parent="."]

[node name="CanvasGroup" type="CanvasGroup" parent="."]
self_modulate = Color(1, 1, 1, 0.588235)

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground"]
texture = ExtResource("5_76ls1")
offset = Vector2(960, 540)

[connection signal="collectable_collected" from="Player" to="." method="_on_player_collectable_collected"]
[connection signal="dead" from="Player" to="." method="_on_player_dead"]
[connection signal="win" from="Player" to="." method="_on_player_win"]
[connection signal="added_collectable" from="PatternContainer" to="." method="_on_pattern_container_added_collectable"]
